[gd_scene load_steps=4 format=2]

[ext_resource path="res://mesh/Entity.gd" type="Script" id=1]
[ext_resource path="res://scenes/Game/Selection/Selection.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Game/Interactions/Interactions.tscn" type="PackedScene" id=3]

[node name="Entity" type="Spatial"]
script = ExtResource( 1 )

[node name="Collidor" type="StaticBody" parent="."]

[node name="InteractionRange" type="Area" parent="."]

[node name="Selection" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Interactions" parent="." instance=ExtResource( 3 )]
[connection signal="input_event" from="Collidor" to="." method="_on_Collidor_input_event"]
[connection signal="mouse_entered" from="Collidor" to="." method="_on_Collidor_mouse_entered"]
[connection signal="mouse_exited" from="Collidor" to="." method="_on_Collidor_mouse_exited"]

[editable path="Interactions"]
